--- a/paper/supplement.tex
+++ b/paper/supplement.tex
@@ -39,7 +39,7 @@
 1. ease of installation -- requires only python (python2 or python3), bwa,
    and samtools for the aligner.
 
-2. easy of use -- a single script indexes the fasta, aligns the reads, and
+2. ease of use -- a single script indexes the fasta, aligns the reads, and
    tabulates methylation. Default parameters work well.
 
 3. speed -- due to the efficient parallelization by bwa, bwa-meth can run on
@@ -66,9 +66,9 @@
    from only considering reads that align to the original bottom strand.
 
 8. specificity and sensitivity -- while the difference between aligners in
-   this regard is small, we have shown that bwa-meth consistently peforms as the
-   best or among the best. We believe this to be the case in general and not
-   limited to the specific cases that we have shown.
+   this regard is small, we have shown that bwa-meth consistently performs as
+   the best or among the best. We believe this to be the case in general and
+   not limited to the specific cases that we have shown.
 
 9. accuracy without trimming -- the accuracy is due in part to bwa's local
    alignment. This is something that is not supported in bismark and means that
