--- a/paper/supplement.tex
+++ b/paper/supplement.tex
@@ -124,7 +124,7 @@ overall mapping rate.
     \centering
     \caption{Resources on real data}
     \begin{tabular}{lllll} \hline
-    trimmed & program & time(min) & mem(GB) & dataset \\ \hline
+    trimmed & program & CPU time(min) & mem(GB) & dataset \\ \hline
 
 no &    bis1 & 576.98 & 8.30 & real \\
 no &    bis2 & 2095.78 & 9.87 & real \\
@@ -179,7 +179,7 @@ since we are interested in the overall mapping rate.
     \caption{Resources on simulated data
 (programs run with more processes will use more memory)}
     \begin{tabular}{lllll} \hline
-    trimmed & program & time(min) & mem(GB) & dataset \\ \hline
+    trimmed & program & CPU time(min) & mem(GB) & dataset \\ \hline
 
 no &    bis1 & 62.98 & 8.28 & sim \\
 no &    bis2 & 232.53 & 9.56 & sim \\
