update sim info

--- a/paper/supplement.tex
+++ b/paper/supplement.tex
@@ -149,8 +149,9 @@ yes &    last & 559.04 & 34.53 & real \\
 \end{table}
 
 \section{Comparison On Simulated Data}
-Paired-end, 100-base reads were simulated using the tool \emph{Sherman} (http://www.bioinformatics.babraham.ac.uk/projects/sherman/) and aligned using the
-same parameters as for Figure 1 for the main paper.
+Paired-end, 100-base reads were simulated using the tool \emph{Sherman} (http://www.bioinformatics.babraham.ac.uk/projects/sherman/) with 95\% of the reads simulated from mm10 and 5\% of the reads from \emph{E. coli}. 
+Reads were aligned with the parameters in Supplemental Table 1. Reads from \emph{E. coli} aligning to \emph{mm10}
+were considered as off-target reads.
 Supplemental Figure 3 below shows the result for these simulations.
 
 
