--- a/paper/supplement.tex
+++ b/paper/supplement.tex
@@ -151,7 +151,7 @@ yes &    last & 559.04 & 34.53 & real \\
 \section{Comparison On Simulated Data}
 Paired-end, 100-base reads were simulated using the tool \emph{Sherman} (http://www.bioinformatics.babraham.ac.uk/projects/sherman/) with 95\% of the reads simulated from mm10 and 5\% of the reads from \emph{E. coli}. 
 Reads were aligned with the parameters in Supplemental Table 1. Reads from \emph{E. coli} aligning to \emph{mm10}
-were considered as off-target reads.
+were considered as off-target reads. The Y-axis in the plot is the percent of the \emph{mm10} reads.
 Supplemental Figure 3 below shows the result for these simulations.
 
 
