--- a/paper/document.tex
+++ b/paper/document.tex
@@ -10,7 +10,7 @@
 Brent S. Pedersen\,$^{1,}
 \footnote{To whom correspondence should be addressed.  Email: bpederse@gmail.com}$,
 Kenneth Eyring\,$^{1}$,
-Subhajyoti De\,${1,2}$,
+Subhajyoti De\,$^{1,2}$,
 Ivana V. Yang\,$^{1}$
 and David A. Schwartz\,$^1$%
 }
@@ -48,7 +48,7 @@ Supplemental Information I
 \end{abstract}
 
 \section{Introduction}
-Bisulfite sequencing (BS-Seq) is a common way to explore DNA methylation status.
+Bisulfite sequencing (BS-Seq) is a common way to explore DNA methylation.
 As a result, software 
 has been developed to map sequence reads treated with bisulfite to a reference genome \citep{frithlast,methylcoder,gsnap,krueger2011,bsmap,bsmooth}.
 Previous studies have compared alignment statistics on 
@@ -188,7 +188,7 @@ targets CpG-rich regions to compare aligners.
 We show that \textit{bwa-meth} is very accurate, even without quality trimming.
 Aligners that use global alignment benefit more from quality trimming and may
 also require an additional copy of the \emph{in silico} converted reads.
-\textit{bwa-meth} is also very fast and it outputs alignments to a sorted bam
+\textit{bwa-meth} is also fast and it outputs alignments to a sorted bam
 that is immediately usable by downstream tools.
 
 \section*{Acknowledgement}
