--- a/paper/supplement.tex
+++ b/paper/supplement.tex
@@ -123,24 +123,23 @@ overall mapping rate.
     \begin{tabular}{lllll} \hline
     trimmed & program & CPU time(min) & mem(GB) & dataset \\ \hline
 
-no &    bis1 & 576.98 & 8.30 & real \\
-no &    bis2 & 2095.78 & 9.87 & real \\
-no &    bison & 1647.23 & 10.37 & real \\
-no &    bsmap & 8704.41 & 22.70 & real \\
-no &    bsmooth & 5207.10 & 9.90 & real \\
-no &    bwa & 335.35 & 14.90 & real \\
-no &    gsnap & 5288.03 & 13.04 & real \\
-no &    last & 612.08 & 34.53 & real \\
+no &    bis1 & 588.68 & 8.30 & real \\
+no &    bis2 & 2067.23 & 9.88 & real \\
+no &    bison & 1639.25 & 10.34 & real \\
+no &    bsmap & 8498.52 & 23.06 & real \\
+no &    bsmooth & 5469.96 & 9.94 & real \\
+no &    bwa & 490.37 & 17.70 & real \\
+no &    gsnap & 5309.48 & 12.73 & real \\
+no &    last & 611.22 & 34.53 & real \\
 
-yes &    bis1 & 581.37 & 8.28 & real \\
-yes &    bis2 & 1901.68 & 9.64 & real \\
-yes &    bison & 1442.46 & 10.06 & real \\
-yes &    bsmap & 6915.10 & 23.29 & real \\
-yes &    bsmooth & 4959.62 & 9.45 & real \\
-yes &    bwa & 301.71 & 14.03 & real \\
-yes &    gsnap & 4372.86 & 13.43 & real \\
-yes &    last & 559.04 & 34.53 & real \\
-
+yes &    bis1 & 581.60 & 8.28 & real \\
+yes &    bis2 & 1921.00 & 9.64 & real \\
+yes &    bison & 1433.06 & 10.06 & real \\
+yes &    bsmap & 7259.29 & 23.19 & real \\
+yes &    bsmooth & 5189.16 & 9.46 & real \\
+yes &    bwa & 413.69 & 17.65 & real \\
+yes &    gsnap & 4565.57 & 13.93 & real \\
+yes &    last & 560.53 & 34.53 & real \\
 
     \end{tabular}
 \end{table}
@@ -187,28 +186,29 @@ mapping rate.
 %http://truben.no/latex/table/
 \begin{table}[H]
     \centering
-    \caption{Resources on simulated data
+    \caption{Resources on simulated data with 1\% error-rate
 (programs run with more processes will use more memory)}
     \begin{tabular}{lllll} \hline
     trimmed & program & CPU time(min) & mem(GB) & dataset \\ \hline
 
-no &    bis1 & 62.98 & 8.28 & sim \\
-no &    bis2 & 232.53 & 9.56 & sim \\
-no &    bison & 173.19 & 9.10 & sim \\
-no &    bsmap & 215.35 & 22.54 & sim \\
-no &    bsmooth & 316.66 & 9.30 & sim \\
-no &    bwa & 111.90 & 18.60 & sim \\
-no &    gsnap & 238.48 & 10.20 & sim \\
-no &    last & 137.17 & 25.90 & sim \\
+no &    bis1 & 69.07 & 8.28 & sim \\
+no &    bis2 & 271.13 & 9.66 & sim \\
+no &    bison & 222.23 & 9.51 & sim \\
+no &    bsmap & 227.35 & 22.99 & sim \\
+no &    bsmooth & 501.97 & 9.52 & sim \\
+no &    bwa & 145.56 & 19.40 & sim \\
+no &    gsnap & 265.41 & 10.84 & sim \\
+no &    last & 138.50 & 25.90 & sim \\
 
-yes &    bis1 & 61.73 & 8.27 & sim \\
-yes &    bis2 & 219.23 & 9.45 & sim \\
-yes &    bison & 147.64 & 9.15 & sim \\
-yes &    bsmap & 75.32 & 22.87 & sim \\
-yes &    bsmooth & 291.70 & 9.17 & sim \\
-yes &    bwa & 163.70 & 21.57 & sim \\
-yes &    gsnap & 74.72 & 11.73 & sim \\
-yes &    last & 109.39 & 25.90 & sim \\
+yes &    bis1 & 62.92 & 8.27 & sim \\
+yes &    bis2 & 227.30 & 9.47 & sim \\
+yes &    bison & 154.81 & 9.16 & sim \\
+yes &    bsmap & 93.70 & 22.84 & sim \\
+yes &    bsmooth & 461.71 & 9.31 & sim \\
+yes &    bwa & 199.15 & 22.25 & sim \\
+yes &    gsnap & 91.98 & 10.78 & sim \\
+yes &    last & 113.80 & 25.90 & sim \\
+
 
     \end{tabular}
 \end{table}
