--- a/paper/supplement.tex
+++ b/paper/supplement.tex
@@ -224,7 +224,7 @@ Supplemental Figure 5 below shows the result for these simulations.
     
 \begin{figure}[H]%figure5
     \centerline{\includegraphics[width=125mm]{noerrorsim-quals.eps}}
-    \caption{Percent of paired-end, \emph{simulated} 100-base reads on (y) and off (x)
+    \caption{Percent of paired-end, \emph{error-free, simulated} 100-base reads on (y) and off (x)
     target for the tested aligners. Aligners that report mapping quality are shown as
     connected dots for each quality cut-off. Reads are limited to those considered as
     primary, mapped alignments by the aligner.
@@ -239,7 +239,7 @@ mapping rate.
  
 \begin{figure}[H]%figure6
     \centerline{\includegraphics[width=125mm]{noerrorsim-trim-quals.eps}}
-    \caption{Percent of paired-end, \emph{trimmed}, \emph{simulated} 100-base reads on (y) and off (x) target for the tested aligners. Aligners that report mapping quality are shown as connected dots for each quality cut-off. Reads are limited to those considered as primary, mapped alignments by the aligner.
+    \caption{Percent of paired-end, \emph{trimmed}, \emph{error-free, simulated} 100-base reads on (y) and off (x) target for the tested aligners. Aligners that report mapping quality are shown as connected dots for each quality cut-off. Reads are limited to those considered as primary, mapped alignments by the aligner.
 }\label{suppfig:06}
 \end{figure}
 
